--- a/index.html
+++ b/index.html
@@ -173,7 +173,15 @@
   <button id="logout-btn">Logout</button>
 
   <div id="guess-modal">
-    <input type="text" id="guess-input" placeholder="Enter road name" />
+   <input 
+  type="text" 
+  id="guess-input" 
+  placeholder="Enter road name" 
+  autocorrect="off" 
+  autocapitalize="off" 
+  spellcheck="false" 
+/>
+
     <div>
       <button id="submit-guess">Submit</button>
       <button id="give-up">Give Up</button>
