--- a/index.html
+++ b/index.html
@@ -524,6 +524,7 @@ if (attemptCounts[currentRoad.id] >= 4 && !currentRoad.hintGiven) {
     document.getElementById('guess-modal').style.display = 'none';
     document.getElementById('feedback-message').innerText = '';
     currentRoad = null;
+    window.scrollTo({ top: 0, behavior: 'smooth' });
   }, hideDelay);
 };
 document.getElementById('give-up').onclick = async function () {
