--- a/index.html
+++ b/index.html
@@ -646,7 +646,14 @@ function playLoop() {
   sourceNode.connect(audioContext.destination);
   sourceNode.loop = true;
   sourceNode.start(0);
+
+  // ✅ Visual confirmation banner
+  document.body.insertAdjacentHTML(
+    'beforeend',
+    `<div style="position:fixed;bottom:20px;left:20px;background:#4caf50;color:white;padding:5px 10px;border-radius:5px;z-index:9999;">✅ Music Resumed</div>`
+  );
 }
+
 
 // Stop loop
 function stopLoop() {
