--- a/index.html
+++ b/index.html
@@ -648,10 +648,26 @@ function playLoop() {
   sourceNode.start(0);
 
   // ✅ Visual confirmation banner
-  document.body.insertAdjacentHTML(
-    'beforeend',
-    `<div style="position:fixed;bottom:20px;left:20px;background:#4caf50;color:white;padding:5px 10px;border-radius:5px;z-index:9999;">✅ Music Resumed</div>`
-  );
+ // ✅ Visual confirmation banner
+const resumeBanner = document.createElement('div');
+resumeBanner.innerText = '✅ Music Resumed';
+resumeBanner.style.cssText = `
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background: #4caf50;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  z-index: 9999;
+`;
+document.body.appendChild(resumeBanner);
+
+// ⏳ Auto-remove after 3 seconds
+setTimeout(() => {
+  resumeBanner.remove();
+}, 3000);
+
 }
 
 
