--- a/index.html
+++ b/index.html
@@ -169,8 +169,12 @@
   <div class="legend-item"><div class="legend-color" style="background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet); border: none;"></div>Ultra-Hard Mode</div>
 </div>
 
-  <button id="login-btn">Login with Google</button>
-  <button id="logout-btn">Logout</button>
+<div id="auth-box" class="legend" style="right: 10px; left: auto;">
+  <div id="auth-message">Checking login...</div>
+  <button id="login-btn" style="margin-top: 6px;">Login with Google</button>
+  <button id="logout-btn" style="margin-top: 6px; display: none;">Logout</button>
+</div>
+
 
   <div id="guess-modal">
    <input 
