--- a/index.html
+++ b/index.html
@@ -42,21 +42,25 @@
   border: 1px solid #666;
 }
 
-    #login-btn, #logout-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      padding: 8px 12px;
-      background: black;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      font-size: 13px;
-      cursor: pointer;
-      z-index: 1001;
-    }
+    #auth-box {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 1000;
+  max-width: 220px;
+  text-align: right;
+}
 
-    #logout-btn { right: 130px; }
+#auth-box button {
+  padding: 5px 10px;
+  font-size: 12.5px;
+  background: #333;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 
     #music-btn {
       position: absolute;
