--- a/index.html
+++ b/index.html
@@ -179,6 +179,23 @@
   <button id="logout-btn" style="margin-top: 6px; display: none;">Logout</button>
 </div>
 
+<div id="encouragement-modal" style="
+  position: absolute;
+  top: 70px;
+  right: 10px;
+  background: #fff8dc;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  padding: 10px 12px;
+  font-size: 13.5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.12);
+  display: none;
+  z-index: 1002;
+  max-width: 240px;
+">
+  <strong>Log in to save your progress!</strong>
+  <div style="margin-top: 4px;">Guesses won’t be saved unless you log in.</div>
+</div>
 
   <div id="guess-modal">
    <input 
