--- a/index.html
+++ b/index.html
@@ -551,7 +551,16 @@ if (attemptCounts[currentRoad.id] >= 4 && !currentRoad.hintGiven) {
     layer.setStyle({ color: color, weight: 6 });
   }
 
+ if (currentUserId) {
   await saveGuessSegmentIds(segmentIds, isCorrect, usedHint);
+} else {
+  preLoginGuesses.push({
+    segmentIds,
+    isCorrect,
+    usedHint
+  });
+}
+
   if (isCorrect || usedHint) {
   completedRoads.add(normalizedCorrect);
 }
