--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@ async function checkLogin() {
 
   // ✅ Save any guesses made before login
   for (const guess of preLoginGuesses) {
+    console.log('Saving pre-login guess:', guess);
     await saveGuessSegmentIds(guess.segmentIds, guess.isCorrect, guess.usedHint);
   }
   preLoginGuesses = [];
