--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
 <div id="auth-box" class="legend" style="right: 10px; left: auto;">
   <div id="auth-message">Checking login...</div>
   <button id="login-btn" style="margin-top: 6px;">Login with Google</button>
+
+<p id="login-note" style="font-size: 12px; color: #888; margin-top: 4px;">
+  🔒 You'll briefly see <code>supabase.co</code> during login — it's safe and secure.
+</p>
   <button id="logout-btn" style="margin-top: 6px; display: none;">Logout</button>
 </div>
 
