--- a/index.html
+++ b/index.html
@@ -177,7 +177,14 @@
   <div id="auth-message">Checking login...</div>
   <button id="login-btn" style="margin-top: 6px;">Login with Google</button>
 
-<p id="login-note" style="font-size: 12px; color: #888; margin-top: 4px;">
+<p id="login-note" style="
+  font-size: 12px;
+  color: #888;
+  margin-top: 6px;
+  max-width: 160px;
+  line-height: 1.4;
+  word-wrap: break-word;
+">
   🔒 You'll briefly see <code>supabase.co</code> during login — it's safe and secure.
 </p>
   <button id="logout-btn" style="margin-top: 6px; display: none;">Logout</button>
