--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   line-height: 1.4;
   word-wrap: break-word;
 ">
-  🔒 You'll briefly see <code>supabase.co</code> during login — it's safe and secure.
+  🔒 You'll briefly see <code>supabase.co</code> during login, it's safe and secure.
 </p>
   <button id="logout-btn" style="margin-top: 6px; display: none;">Logout</button>
 </div>
