--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
   font-size: 12px;
   color: #888;
   margin-top: 6px;
+  margin-bottom: 5px;
   max-width: 160px;
   line-height: 1.4;
   word-wrap: break-word;
